--- a/src/main/java/Vista/MenuAdmin.form
+++ b/src/main/java/Vista/MenuAdmin.form
@@ -132,7 +132,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="ALUMNOS"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Hand Cursor"/>
+                  <Color id="Cursor Por defecto"/>
                 </Property>
                 <Property name="iconTextGap" type="int" value="10"/>
               </Properties>
@@ -185,7 +185,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="COMUNICADOS"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Hand Cursor"/>
+                  <Color id="Cursor Por defecto"/>
                 </Property>
                 <Property name="iconTextGap" type="int" value="10"/>
               </Properties>
@@ -241,7 +241,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="PROFESORES"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Hand Cursor"/>
+                  <Color id="Cursor Por defecto"/>
                 </Property>
                 <Property name="iconTextGap" type="int" value="10"/>
               </Properties>
@@ -297,7 +297,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="SALONES"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Hand Cursor"/>
+                  <Color id="Cursor Por defecto"/>
                 </Property>
                 <Property name="iconTextGap" type="int" value="10"/>
               </Properties>
@@ -353,7 +353,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="REPORTE DE NOTAS"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Hand Cursor"/>
+                  <Color id="Cursor Por defecto"/>
                 </Property>
                 <Property name="iconTextGap" type="int" value="10"/>
               </Properties>
@@ -409,7 +409,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="PAGOS"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Hand Cursor"/>
+                  <Color id="Cursor Por defecto"/>
                 </Property>
                 <Property name="iconTextGap" type="int" value="10"/>
               </Properties>
@@ -462,7 +462,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="SALIR"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Hand Cursor"/>
+                  <Color id="Cursor Por defecto"/>
                 </Property>
                 <Property name="iconTextGap" type="int" value="10"/>
               </Properties>
