--- a/src/main/java/Vista/MenuProfesores.form
+++ b/src/main/java/Vista/MenuProfesores.form
@@ -129,7 +129,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="ALUMNOS"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Hand Cursor"/>
+                  <Color id="Cursor Por defecto"/>
                 </Property>
                 <Property name="iconTextGap" type="int" value="10"/>
               </Properties>
@@ -182,7 +182,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="COMUNICADOS"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Hand Cursor"/>
+                  <Color id="Cursor Por defecto"/>
                 </Property>
                 <Property name="iconTextGap" type="int" value="10"/>
               </Properties>
@@ -238,7 +238,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="INFORMACI&#xd3;N"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Hand Cursor"/>
+                  <Color id="Cursor Por defecto"/>
                 </Property>
                 <Property name="iconTextGap" type="int" value="10"/>
               </Properties>
@@ -294,7 +294,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="ASISTENCIAS"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Hand Cursor"/>
+                  <Color id="Cursor Por defecto"/>
                 </Property>
                 <Property name="iconTextGap" type="int" value="10"/>
               </Properties>
@@ -350,7 +350,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="REPORTE DE NOTAS"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Hand Cursor"/>
+                  <Color id="Cursor Por defecto"/>
                 </Property>
                 <Property name="iconTextGap" type="int" value="10"/>
               </Properties>
@@ -403,7 +403,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="SALIR"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Hand Cursor"/>
+                  <Color id="Cursor Por defecto"/>
                 </Property>
                 <Property name="iconTextGap" type="int" value="10"/>
               </Properties>
