--- a/src/main/java/Vista/ListaAlumnos.form
+++ b/src/main/java/Vista/ListaAlumnos.form
@@ -168,9 +168,9 @@
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="7">
                 <StringItem index="0" value=""/>
-                <StringItem index="1" value="1ro"/>
+                <StringItem index="1" value="1ero"/>
                 <StringItem index="2" value="2do"/>
-                <StringItem index="3" value="3ro"/>
+                <StringItem index="3" value="3ero"/>
                 <StringItem index="4" value="4to"/>
                 <StringItem index="5" value="5to"/>
                 <StringItem index="6" value="6to"/>
