--- a/src/main/java/Vista/RegistroProfesores.form
+++ b/src/main/java/Vista/RegistroProfesores.form
@@ -55,6 +55,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="REGISTRAR"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel2">
       <Properties>
